can't fix aos and scrollbar bug

--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,6 @@
     font-weight: 400;
     src: url(./fonts/OpenSans-Regular.ttf) format("truetype");
   }
-  
-  html {
-    scroll-behavior: smooth;
-  }
 }
 
 @layer utilities {
